Improve accuracy for Side Views (Robust Calibration) and document future improvements

--- a/卒論本文.md
+++ b/卒論本文.md
@@ -4,7 +4,7 @@
 
 ### 1.1 研究の背景
 近年、筋力トレーニングの現場において、挙上重量（kg）だけでなく挙上速度（m/s）を指標としてトレーニング強度を管理するVelocity Based Training (VBT) の有効性が広く認められている。速度をモニタリングすることで、その日の体調によるパフォーマンス変動を客観的に把握し、オーバートレーニングを防ぎつつ効果的な負荷設定が可能となる。
-しかし、現在普及しているVBTデバイス（LPT: リニアポジショントランスデューサ等）には、導入コストが高額である（数十万円）、専用のケーブルをバーベルに取り付ける手間がかかる、動作中にケーブルが接触してフォームを阻害する可能性があるといった物理的な課題が存在する。
+しかし、現在普及しているVBTデバイス（LPT: ニアポジショントランスデューサ等）には、導入コストが高額である（数十万円）、専用のケーブルをバーベルに取り付ける手間がかかる、動作中にケーブルが接触してフォームを阻害する可能性があるといった物理的な課題が存在する。
 
 ### 1.2 研究の目的
 本研究の目的は、誰もが所有するスマートフォン等の単眼カメラのみを用いた、安価で完全非接触なVBTシステムを構築することである。
